--- a/environment.yml
+++ b/environment.yml
@@ -4,11 +4,13 @@ channels:
 dependencies:
   - python=3.8
   - sqlalchemy
-  - pandas
+  - modin-all
   - pip:
-    - pandas==1.4.4
     - scikit_learn==1.1.3
     - SQLAlchemy==1.4.32
     - yahoo_fin==0.8.9.1
     - psycopg2==2.9.5
+    - ray==2.0.0
+    - gpustat==1.0.0
+    - tqdm==4.64.1
   
