--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - sqlalchemy
   - modin-all
   - pip:
+    - rich
     - scikit_learn==1.1.3
     - SQLAlchemy==1.4.32
     - yahoo_fin==0.8.9.1
@@ -13,4 +14,5 @@ dependencies:
     - ray==2.0.0
     - gpustat==1.0.0
     - tqdm==4.64.1
+    - yfinance==0.2.12
   
