--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,12 @@
 name: stocker
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - python=3.8
+  - pip
   - sqlalchemy
-  - modin-all=0.16.2
+  - conda-forge::modin-all=0.16.2
   - pip:
     - rich
     - scikit_learn==1.1.3
@@ -15,4 +17,3 @@ dependencies:
     - gpustat==1.0.0
     - tqdm==4.64.1
     - yfinance==0.2.12
-  
